--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,27 @@ Semantische_Erschließung_Tests/data/output
 # Webseite
 Webseite/briefedition/node_modules
 Webseite/breifedition/public
+
+.DS_Store
+node_modules
+/dist
+
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
